// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnippetSettingsModal Renders SnippetSettingsModal Modal in default state 1`] = `
.emotion-0 {
  position: fixed;
  height: 100%;
  width: 100vw;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  top: 0;
  left: 0;
  z-index: 1100;
}

.emotion-1 {
  position: fixed;
  height: 100%;
  width: 100%;
  -webkit-backdrop-filter: blur(4px);
  backdrop-filter: blur(4px);
  background-color: rgba(217,220,222,0.8);
  top: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  z-index: 1100;
  transition-property: opacity;
  transition-timing-function: cubic-bezier(0, 0, 0.4, 0.9);
  transition-duration: 200ms;
  opacity: 1;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-2 {
  border: none;
  outline: none;
  box-sizing: border-box;
  max-height: 100vh;
  max-width: calc(100vw - 32px);
  background-color: rgb(255,255,255);
  overflow: hidden;
  box-shadow: 0px 4px 20px -2px rgba(0, 0, 0, 0.25);
  z-index: 1100;
  border-radius: 10px;
  width: 420px;
  transition-property: opacity,transform;
  transition-timing-function: cubic-bezier(0, 0, 0.4, 0.9);
  transition-duration: 200ms;
  opacity: 1;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-3 {
  direction: ltr;
  box-sizing: border-box;
  height: 100%;
  width: 100%;
  overflow: hidden;
  transition-property: opacity;
  transition-timing-function: cubic-bezier(0, 0, 0.4, 0.9);
  transition-duration: 200ms;
  opacity: 1;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  transition-delay: 200ms;
}

.emotion-4 {
  margin: 1.5rem;
}

.emotion-5 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-height: inherit;
  max-width: inherit;
  height: 100%;
  width: 100%;
  overflow: hidden;
  box-sizing: border-box;
}

.emotion-6 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  max-width: 100vw;
  max-height: 100vh;
  height: 100%;
  width: 100%;
  overflow-y: auto;
  position: relative;
}

.emotion-7 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  overflow: visible;
  -webkit-transition: box-shadow .2s ease-in-out;
  transition: box-shadow .2s ease-in-out;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0.15rem;
}

.emotion-9 {
  font-size: 1.5rem;
  color: rgb(26,32,38);
  width: 100%;
  font-weight: 400;
}

.emotion-10 {
  direction: ltr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 10px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Rubik','Helvetica','Arial';
  font-style: normal;
  font-weight: 400;
  height: 40px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: 0;
  margin-right: 0;
  margin-left: 0;
  max-width: 100%;
  padding-bottom: 0;
  padding-top: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color cubic-bezier(0, 0, 0.39, 1) 100ms,color cubic-bezier(0, 0, 0.39, 1) 100ms,border-color cubic-bezier(0, 0, 0.39, 1) 100ms,box-shadow cubic-bezier(0.2, 0, 0.4, 0.9) 100ms;
  transition: background-color cubic-bezier(0, 0, 0.39, 1) 100ms,color cubic-bezier(0, 0, 0.39, 1) 100ms,border-color cubic-bezier(0, 0, 0.39, 1) 100ms,box-shadow cubic-bezier(0.2, 0, 0.4, 0.9) 100ms;
  color: rgb(105,113,122);
  border-color: transparent;
  font-size: 1rem;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  min-width: 0;
  padding: 0.5rem;
  width: 40px;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (hover: hover) {
  .emotion-10:hover {
    color: rgb(255,255,255);
    background-color: rgb(52,56,63);
    border-color: rgb(74,80,89);
  }
}

.emotion-10:active {
  color: rgb(255,255,255);
  background-color: rgb(52,56,63);
  border-color: rgb(52,56,63);
  -webkit-transform: scale(0.96);
  -moz-transform: scale(0.96);
  -ms-transform: scale(0.96);
  transform: scale(0.96);
}

.emotion-10:active svg {
  fill: rgb(255,255,255);
}

.emotion-10:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px rgb(0,106,225);
}

.emotion-11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
}

.emotion-12 {
  width: 1.5rem;
  height: 1.5rem;
  fill: currentColor;
}

.emotion-13 {
  direction: inherit;
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  min-height: 0;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-14 {
  direction: inherit;
  box-sizing: border-box;
  position: relative;
  display: block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  min-height: inherit;
  min-width: 0px;
  width: 100%;
  margin-left: 0px;
  margin-right: 0px;
  padding-left: 8px;
  padding-right: 8px;
  margin-top: 1rem;
}

@media (min-width: 336px) {
  .emotion-14 {
    min-width: 0px;
    width: 100%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    margin-left: 0px;
    margin-right: 0px;
  }
}

@media (min-width: 560px) {
  .emotion-14 {
    min-width: 0px;
    width: 100%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    margin-left: 0px;
    margin-right: 0px;
  }
}

@media (min-width: 1080px) {
  .emotion-14 {
    min-width: 0px;
    width: 100%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    margin-left: 0px;
    margin-right: 0px;
    padding-left: 12px;
    padding-right: 12px;
  }
}

@media (min-width: 1464px) {
  .emotion-14 {
    min-width: 0px;
    width: 100%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    margin-left: 0px;
    margin-right: 0px;
  }
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-16 {
  margin: 0 0.2rem 0.25rem 0;
  font-size: 13 px;
  line-height: 19.5 px;
  font-weight: 400;
  color: rgb(105,113,122);
}

.emotion-17 {
  margin: 0.15rem 0 0 0;
  cursor: pointer;
}

.emotion-18 {
  width: 1rem;
  height: 1rem;
  fill: currentColor;
}

.emotion-20 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  box-sizing: border-box;
  display: block;
  margin: 0;
  padding: 0 0 1rem 0;
  width: 100%;
  vertical-align: top;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  text-align: left;
  direction: ltr;
}

.emotion-21 {
  position: relative;
}

.emotion-22 {
  font-family: 'Rubik','Helvetica','Arial';
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1.5;
  text-indent: 0;
  text-shadow: none;
  text-transform: none;
  color: rgb(105,113,122);
  display: block;
  font-size: 0.875rem;
  margin: 0 0 0.25rem;
  padding: 0;
  vertical-align: top;
  text-align: left;
}

.emotion-23 {
  font-family: 'Rubik','Helvetica','Arial';
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1.25;
  text-align: left;
  text-indent: 0;
  text-shadow: none;
  text-transform: none;
  box-sizing: border-box;
  clear: both;
  color: rgb(26,32,38);
  display: block;
  font-size: 0.875rem;
  list-style-type: none;
  margin: 0;
  outline: 0;
  padding: 0;
}

.emotion-24 {
  position: relative;
  padding: 0.5rem 0;
  outline: none;
  display: inherit;
}

.emotion-25 {
  position: absolute;
  left: -9999px;
}

.emotion-26 {
  display: inline-block;
  font-size: 0.875rem;
  margin-left: 1rem;
  padding-left: 0.5rem;
  position: relative;
}

.emotion-26::before {
  border-radius: 50%;
  box-sizing: border-box;
  content: "";
  display: block;
  position: absolute;
  top: 0;
  height: 1rem;
  width: 1rem;
  font-size: 1rem;
  cursor: pointer;
  padding-left: 0.5rem;
  left: -1rem;
  transition-property: box-shadow;
  transition-duration: 100ms;
  transition-timing-function: cubic-bezier(0.2, 0, 0.4, 0.9);
  background: rgb(0,106,225);
  border: 1px solid rgb(0,106,225);
}

.emotion-26::after {
  border-radius: 50%;
  box-sizing: border-box;
  content: "";
  display: block;
  position: absolute;
  cursor: pointer;
  font-size: 1rem;
  background: rgb(255,255,255);
  left: -11px;
  top: 5px;
  height: 0.375rem;
  width: 0.375rem;
}

.emotion-29 {
  display: inline-block;
  font-size: 0.875rem;
  margin-left: 1rem;
  padding-left: 0.5rem;
  position: relative;
}

.emotion-29::before {
  border-radius: 50%;
  box-sizing: border-box;
  content: "";
  display: block;
  position: absolute;
  top: 0;
  height: 1rem;
  width: 1rem;
  font-size: 1rem;
  cursor: pointer;
  padding-left: 0.5rem;
  left: -1rem;
  transition-property: box-shadow;
  transition-duration: 100ms;
  transition-timing-function: cubic-bezier(0.2, 0, 0.4, 0.9);
  background-color: rgb(255,255,255);
  color: rgb(26,32,38);
  border: 1px solid rgb(105,113,122);
}

.emotion-42 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  margin-top: 2rem;
  padding: 0.15rem;
}

.emotion-43 {
  direction: ltr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgb(0,106,225);
  border: 1px solid transparent;
  border-radius: 10px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Rubik','Helvetica','Arial';
  font-style: normal;
  font-weight: 400;
  height: 40px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: 0;
  margin-right: 0;
  margin-left: 0;
  max-width: 100%;
  padding-bottom: 0;
  padding-top: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color cubic-bezier(0, 0, 0.39, 1) 100ms,color cubic-bezier(0, 0, 0.39, 1) 100ms,border-color cubic-bezier(0, 0, 0.39, 1) 100ms,box-shadow cubic-bezier(0.2, 0, 0.4, 0.9) 100ms;
  transition: background-color cubic-bezier(0, 0, 0.39, 1) 100ms,color cubic-bezier(0, 0, 0.39, 1) 100ms,border-color cubic-bezier(0, 0, 0.39, 1) 100ms,box-shadow cubic-bezier(0.2, 0, 0.4, 0.9) 100ms;
  color: rgb(255,255,255);
  font-size: 1rem;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  min-width: 96px;
  margin-left: 0.5rem;
}

@media (hover: hover) {
  .emotion-43:hover {
    background-color: #004CD6;
  }
}

.emotion-43:active {
  background-color: #0025BD;
  -webkit-transform: scale(0.96);
  -moz-transform: scale(0.96);
  -ms-transform: scale(0.96);
  transform: scale(0.96);
}

.emotion-43:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px #4494EF;
}

.emotion-43 svg {
  fill: rgb(255,255,255);
}

.emotion-44 {
  min-width: 0;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-45 {
  direction: ltr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 10px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Rubik','Helvetica','Arial';
  font-style: normal;
  font-weight: 400;
  height: 40px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: 0;
  margin-right: 0;
  margin-left: 0;
  max-width: 100%;
  padding-bottom: 0;
  padding-top: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color cubic-bezier(0, 0, 0.39, 1) 100ms,color cubic-bezier(0, 0, 0.39, 1) 100ms,border-color cubic-bezier(0, 0, 0.39, 1) 100ms,box-shadow cubic-bezier(0.2, 0, 0.4, 0.9) 100ms;
  transition: background-color cubic-bezier(0, 0, 0.39, 1) 100ms,color cubic-bezier(0, 0, 0.39, 1) 100ms,border-color cubic-bezier(0, 0, 0.39, 1) 100ms,box-shadow cubic-bezier(0.2, 0, 0.4, 0.9) 100ms;
  color: #006DE9;
  font-size: 1rem;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  min-width: 96px;
}

@media (hover: hover) {
  .emotion-45:hover {
    background-color: rgb(242,248,254);
    color: #004CD6;
  }

  .emotion-45:hover svg {
    fill: #004CD6;
  }
}

.emotion-45:active {
  background-color: #CFE4FC;
  color: #004CD6;
  -webkit-transform: scale(0.96);
  -moz-transform: scale(0.96);
  -ms-transform: scale(0.96);
  transform: scale(0.96);
}

.emotion-45:active svg {
  fill: #004CD6;
}

.emotion-45:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px #4494EF;
}

.emotion-47 {
  position: absolute;
  left: 0;
  top: 0;
  z-index: 100;
}

.emotion-48 {
  position: absolute;
  visibility: hidden;
}

<body
  style="overflow: hidden;"
>
  <div>
    <div>
      <div
        class="emotion-0"
      >
        <div
          class="emotion-1"
          data-cvent-id="test-snippet-settings-modal-scrim"
        />
        <div
          aria-label="Configure Settings"
          aria-modal="true"
          class="focus-visible  emotion-2"
          data-cvent-id="test-snippet-settings-modal"
          role="dialog"
          tabindex="-1"
        >
          <div
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                <div
                  class="emotion-6"
                >
                  <div
                    class="emotion-7"
                  >
                    <div
                      class="emotion-8"
                    >
                      <span
                        class="emotion-9"
                      >
                        Configure Settings
                      </span>
                      <button
                        aria-label="close modal "
                        class="emotion-10"
                        data-cvent-id="test-snippet-settings-modal-cross-button"
                        type="button"
                      >
                        <span
                          class="emotion-11"
                        >
                          <svg
                            aria-hidden="true"
                            class="emotion-12"
                            focusable="false"
                            role="img"
                            viewBox="0 0 32 32"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g>
                              <svg
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M13.4 12l5.3-5.3c.4-.4.4-1 0-1.4-.4-.4-1-.4-1.4 0L12 10.6 6.7 5.3c-.4-.4-1-.4-1.4 0-.4.4-.4 1 0 1.4l5.3 5.3-5.3 5.3c-.4.4-.4 1 0 1.4.2.2.4.3.7.3.3 0 .5-.1.7-.3l5.3-5.3 5.3 5.3c.2.2.5.3.7.3.2 0 .5-.1.7-.3.4-.4.4-1 0-1.4L13.4 12z"
                                />
                              </svg>
                            </g>
                          </svg>
                        </span>
                      </button>
                    </div>
                  </div>
                  <div
                    class="emotion-13"
                    data-layout="row"
                  >
                    <div
                      class="emotion-14"
                      data-layout="col"
                    >
                      <div
                        class="emotion-15"
                      >
                        <p
                          class="emotion-16"
                        >
                          Code Snippet
                        </p>
                        <div
                          class="emotion-17"
                        >
                          <div>
                            <div
                              aria-label="Code Snippet"
                              role="tooltip"
                              tabindex="0"
                            >
                              <svg
                                aria-hidden="true"
                                class="emotion-18"
                                focusable="false"
                                role="img"
                                viewBox="0 0 32 32"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <g>
                                  <svg
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M12 1C5.9 1 1 5.9 1 12s4.9 11 11 11 11-4.9 11-11S18.1 1 12 1zm0 20c-5 0-9-4-9-9s4-9 9-9 9 4 9 9-4 9-9 9zm0-5.25a1.25 1.25 0 110 2.5 1.25 1.25 0 010-2.5zM10.2 6.4c1-.5 2.1-.5 3.1-.1 1.5.5 2.6 2 2.7 3.9 0 2.6-3.3 3.8-3.7 3.9-.1.1-.2.1-.3.1-.4 0-.8-.3-.9-.7-.2-.6.1-1.1.6-1.3.6-.3 2.3-1.1 2.3-2.1 0-.9-.5-1.7-1.3-1.9-.6-.2-1.1-.2-1.6 0s-.8.6-1 1.1c-.2.6-.8.9-1.3.7-.5-.2-.8-.8-.6-1.3.3-1 1-1.8 2-2.3z"
                                    />
                                    <g
                                      fill-rule="evenodd"
                                    >
                                      <use />
                                      <use
                                        fill-rule="nonzero"
                                      />
                                    </g>
                                  </svg>
                                </g>
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div>
                        <div>
                          Code-Snippet
                        </div>
                      </div>
                    </div>
                    <div
                      class="emotion-14"
                      data-layout="col"
                    >
                      <div
                        class="emotion-20"
                      >
                        <div
                          class="emotion-21"
                        >
                          <label
                            class="emotion-22"
                            for="whereDoesItRun_radio_button"
                          >
                            Where does this run?
                          </label>
                        </div>
                        <div
                          class="emotion-23"
                          data-cvent-id="where_does_it_run-radio"
                          role="radiogroup"
                        >
                          <div
                            class="emotion-24"
                            data-cvent-id="where_does_it_run-radio__div__1"
                          >
                            <input
                              aria-checked="true"
                              aria-invalid="false"
                              checked=""
                              class="emotion-25"
                              data-cvent-id="where_does_it_run-radio__1"
                              id="whereDoesItRun__0"
                              name="whereDoesItRun"
                              type="radio"
                              value="1"
                            />
                            <label
                              class="emotion-26"
                              for="whereDoesItRun__0"
                              id="whereDoesItRun__0_label"
                            >
                              All pages
                            </label>
                          </div>
                          <div
                            class="emotion-24"
                            data-cvent-id="where_does_it_run-radio__div__0"
                          >
                            <input
                              aria-checked="false"
                              aria-invalid="false"
                              class="emotion-25"
                              data-cvent-id="where_does_it_run-radio__0"
                              id="whereDoesItRun__1"
                              name="whereDoesItRun"
                              type="radio"
                              value="0"
                            />
                            <label
                              class="emotion-29"
                              for="whereDoesItRun__1"
                              id="whereDoesItRun__1_label"
                            >
                              Only video details pages
                            </label>
                          </div>
                        </div>
                      </div>
                      <div
                        class="emotion-15"
                      >
                        <p
                          class="emotion-16"
                        >
                          When does this run?
                        </p>
                        <div
                          class="emotion-17"
                        >
                          <div>
                            <div
                              aria-label="When does this run?"
                              role="tooltip"
                              tabindex="0"
                            >
                              <svg
                                aria-hidden="true"
                                class="emotion-18"
                                focusable="false"
                                role="img"
                                viewBox="0 0 32 32"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <g>
                                  <svg
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M12 1C5.9 1 1 5.9 1 12s4.9 11 11 11 11-4.9 11-11S18.1 1 12 1zm0 20c-5 0-9-4-9-9s4-9 9-9 9 4 9 9-4 9-9 9zm0-5.25a1.25 1.25 0 110 2.5 1.25 1.25 0 010-2.5zM10.2 6.4c1-.5 2.1-.5 3.1-.1 1.5.5 2.6 2 2.7 3.9 0 2.6-3.3 3.8-3.7 3.9-.1.1-.2.1-.3.1-.4 0-.8-.3-.9-.7-.2-.6.1-1.1.6-1.3.6-.3 2.3-1.1 2.3-2.1 0-.9-.5-1.7-1.3-1.9-.6-.2-1.1-.2-1.6 0s-.8.6-1 1.1c-.2.6-.8.9-1.3.7-.5-.2-.8-.8-.6-1.3.3-1 1-1.8 2-2.3z"
                                    />
                                    <g
                                      fill-rule="evenodd"
                                    >
                                      <use />
                                      <use
                                        fill-rule="nonzero"
                                      />
                                    </g>
                                  </svg>
                                </g>
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="emotion-23"
                        data-cvent-id="snippet-type-radio"
                        role="radiogroup"
                      >
                        <div
                          class="emotion-24"
                          data-cvent-id="snippet-type-radio__div__INITIALIZATION"
                        >
                          <input
                            aria-checked="true"
                            aria-invalid="false"
                            checked=""
                            class="emotion-25"
                            data-cvent-id="snippet-type-radio__INITIALIZATION"
                            id="snippetType__0"
                            name="snippetType"
                            type="radio"
                            value="INITIALIZATION"
                          />
                          <label
                            class="emotion-26"
                            for="snippetType__0"
                            id="snippetType__0_label"
                          >
                            Run on first page load
                          </label>
                        </div>
                        <div
                          class="emotion-24"
                          data-cvent-id="snippet-type-radio__div__ALL_PAGES"
                        >
                          <input
                            aria-checked="false"
                            aria-invalid="false"
                            class="emotion-25"
                            data-cvent-id="snippet-type-radio__ALL_PAGES"
                            id="snippetType__1"
                            name="snippetType"
                            type="radio"
                            value="ALL_PAGES"
                          />
                          <label
                            class="emotion-29"
                            for="snippetType__1"
                            id="snippetType__1_label"
                          >
                            Always run
                          </label>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="emotion-7"
                >
                  <div
                    class="emotion-42"
                  >
                    <div>
                      <div>
                        <div
                          aria-label="Assign this code snippet to a page"
                          tabindex="-1"
                        >
                          <button
                            aria-label="Done"
                            class="emotion-43"
                            data-cvent-id="test-snippet-settings-modal-save-button"
                            type="button"
                          >
                            <span
                              class="emotion-44"
                            >
                              Done
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                    <button
                      aria-label="Cancel"
                      class="emotion-45"
                      data-cvent-id="test-snippet-settings-modal-cancel-button"
                      type="button"
                    >
                      <span
                        class="emotion-44"
                      >
                        Cancel
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    id="carina-portal-root"
  >
    <div>
      <div
        class="emotion-47"
        data-placement="bottom"
      >
        <div
          class="emotion-48"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`SnippetSettingsModal Renders SnippetSettingsModal Modal with Snippet type when Add to login is yes 1`] = `
.emotion-0 {
  position: absolute;
  left: 0;
  top: 0;
  z-index: 100;
}

.emotion-1 {
  position: absolute;
  visibility: hidden;
}

.emotion-2 {
  position: fixed;
  height: 100%;
  width: 100vw;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  top: 0;
  left: 0;
  z-index: 1100;
}

.emotion-3 {
  position: fixed;
  height: 100%;
  width: 100%;
  -webkit-backdrop-filter: blur(4px);
  backdrop-filter: blur(4px);
  background-color: rgba(217,220,222,0.8);
  top: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  z-index: 1100;
  transition-property: opacity;
  transition-timing-function: cubic-bezier(0, 0, 0.4, 0.9);
  transition-duration: 200ms;
  opacity: 1;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-4 {
  border: none;
  outline: none;
  box-sizing: border-box;
  max-height: 100vh;
  max-width: calc(100vw - 32px);
  background-color: rgb(255,255,255);
  overflow: hidden;
  box-shadow: 0px 4px 20px -2px rgba(0, 0, 0, 0.25);
  z-index: 1100;
  border-radius: 10px;
  width: 420px;
  transition-property: opacity,transform;
  transition-timing-function: cubic-bezier(0, 0, 0.4, 0.9);
  transition-duration: 200ms;
  opacity: 1;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-5 {
  direction: ltr;
  box-sizing: border-box;
  height: 100%;
  width: 100%;
  overflow: hidden;
  transition-property: opacity;
  transition-timing-function: cubic-bezier(0, 0, 0.4, 0.9);
  transition-duration: 200ms;
  opacity: 1;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  transition-delay: 200ms;
}

.emotion-6 {
  margin: 1.5rem;
}

.emotion-7 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-height: inherit;
  max-width: inherit;
  height: 100%;
  width: 100%;
  overflow: hidden;
  box-sizing: border-box;
}

.emotion-8 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  max-width: 100vw;
  max-height: 100vh;
  height: 100%;
  width: 100%;
  overflow-y: auto;
  position: relative;
}

.emotion-9 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  overflow: visible;
  -webkit-transition: box-shadow .2s ease-in-out;
  transition: box-shadow .2s ease-in-out;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0.15rem;
}

.emotion-11 {
  font-size: 1.5rem;
  color: rgb(26,32,38);
  width: 100%;
  font-weight: 400;
}

.emotion-12 {
  direction: ltr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 10px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Rubik','Helvetica','Arial';
  font-style: normal;
  font-weight: 400;
  height: 40px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: 0;
  margin-right: 0;
  margin-left: 0;
  max-width: 100%;
  padding-bottom: 0;
  padding-top: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color cubic-bezier(0, 0, 0.39, 1) 100ms,color cubic-bezier(0, 0, 0.39, 1) 100ms,border-color cubic-bezier(0, 0, 0.39, 1) 100ms,box-shadow cubic-bezier(0.2, 0, 0.4, 0.9) 100ms;
  transition: background-color cubic-bezier(0, 0, 0.39, 1) 100ms,color cubic-bezier(0, 0, 0.39, 1) 100ms,border-color cubic-bezier(0, 0, 0.39, 1) 100ms,box-shadow cubic-bezier(0.2, 0, 0.4, 0.9) 100ms;
  color: rgb(105,113,122);
  border-color: transparent;
  font-size: 1rem;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  min-width: 0;
  padding: 0.5rem;
  width: 40px;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (hover: hover) {
  .emotion-12:hover {
    color: rgb(255,255,255);
    background-color: rgb(52,56,63);
    border-color: rgb(74,80,89);
  }
}

.emotion-12:active {
  color: rgb(255,255,255);
  background-color: rgb(52,56,63);
  border-color: rgb(52,56,63);
  -webkit-transform: scale(0.96);
  -moz-transform: scale(0.96);
  -ms-transform: scale(0.96);
  transform: scale(0.96);
}

.emotion-12:active svg {
  fill: rgb(255,255,255);
}

.emotion-12:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px rgb(0,106,225);
}

.emotion-13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
}

.emotion-14 {
  width: 1.5rem;
  height: 1.5rem;
  fill: currentColor;
}

.emotion-15 {
  direction: inherit;
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  min-height: 0;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-16 {
  direction: inherit;
  box-sizing: border-box;
  position: relative;
  display: block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  min-height: inherit;
  min-width: 0px;
  width: 100%;
  margin-left: 0px;
  margin-right: 0px;
  padding-left: 8px;
  padding-right: 8px;
  margin-top: 1rem;
}

@media (min-width: 336px) {
  .emotion-16 {
    min-width: 0px;
    width: 100%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    margin-left: 0px;
    margin-right: 0px;
  }
}

@media (min-width: 560px) {
  .emotion-16 {
    min-width: 0px;
    width: 100%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    margin-left: 0px;
    margin-right: 0px;
  }
}

@media (min-width: 1080px) {
  .emotion-16 {
    min-width: 0px;
    width: 100%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    margin-left: 0px;
    margin-right: 0px;
    padding-left: 12px;
    padding-right: 12px;
  }
}

@media (min-width: 1464px) {
  .emotion-16 {
    min-width: 0px;
    width: 100%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    margin-left: 0px;
    margin-right: 0px;
  }
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-18 {
  margin: 0 0.2rem 0.25rem 0;
  font-size: 13 px;
  line-height: 19.5 px;
  font-weight: 400;
  color: rgb(105,113,122);
}

.emotion-19 {
  margin: 0.15rem 0 0 0;
  cursor: pointer;
}

.emotion-20 {
  width: 1rem;
  height: 1rem;
  fill: currentColor;
}

.emotion-22 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  box-sizing: border-box;
  display: block;
  margin: 0;
  padding: 0 0 1rem 0;
  width: 100%;
  vertical-align: top;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  text-align: left;
  direction: ltr;
}

.emotion-23 {
  position: relative;
}

.emotion-24 {
  font-family: 'Rubik','Helvetica','Arial';
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1.5;
  text-indent: 0;
  text-shadow: none;
  text-transform: none;
  color: rgb(105,113,122);
  display: block;
  font-size: 0.875rem;
  margin: 0 0 0.25rem;
  padding: 0;
  vertical-align: top;
  text-align: left;
}

.emotion-25 {
  font-family: 'Rubik','Helvetica','Arial';
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1.25;
  text-align: left;
  text-indent: 0;
  text-shadow: none;
  text-transform: none;
  box-sizing: border-box;
  clear: both;
  color: rgb(26,32,38);
  display: block;
  font-size: 0.875rem;
  list-style-type: none;
  margin: 0;
  outline: 0;
  padding: 0;
}

.emotion-26 {
  position: relative;
  padding: 0.5rem 0;
  outline: none;
  display: inherit;
}

.emotion-27 {
  position: absolute;
  left: -9999px;
}

.emotion-28 {
  display: inline-block;
  font-size: 0.875rem;
  margin-left: 1rem;
  padding-left: 0.5rem;
  position: relative;
}

.emotion-28::before {
  border-radius: 50%;
  box-sizing: border-box;
  content: "";
  display: block;
  position: absolute;
  top: 0;
  height: 1rem;
  width: 1rem;
  font-size: 1rem;
  cursor: pointer;
  padding-left: 0.5rem;
  left: -1rem;
  transition-property: box-shadow;
  transition-duration: 100ms;
  transition-timing-function: cubic-bezier(0.2, 0, 0.4, 0.9);
  background: rgb(0,106,225);
  border: 1px solid rgb(0,106,225);
}

.emotion-28::after {
  border-radius: 50%;
  box-sizing: border-box;
  content: "";
  display: block;
  position: absolute;
  cursor: pointer;
  font-size: 1rem;
  background: rgb(255,255,255);
  left: -11px;
  top: 5px;
  height: 0.375rem;
  width: 0.375rem;
}

.emotion-31 {
  display: inline-block;
  font-size: 0.875rem;
  margin-left: 1rem;
  padding-left: 0.5rem;
  position: relative;
}

.emotion-31::before {
  border-radius: 50%;
  box-sizing: border-box;
  content: "";
  display: block;
  position: absolute;
  top: 0;
  height: 1rem;
  width: 1rem;
  font-size: 1rem;
  cursor: pointer;
  padding-left: 0.5rem;
  left: -1rem;
  transition-property: box-shadow;
  transition-duration: 100ms;
  transition-timing-function: cubic-bezier(0.2, 0, 0.4, 0.9);
  background-color: rgb(255,255,255);
  color: rgb(26,32,38);
  border: 1px solid rgb(105,113,122);
}

.emotion-44 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  margin-top: 2rem;
  padding: 0.15rem;
}

.emotion-45 {
  direction: ltr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgb(0,106,225);
  border: 1px solid transparent;
  border-radius: 10px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Rubik','Helvetica','Arial';
  font-style: normal;
  font-weight: 400;
  height: 40px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: 0;
  margin-right: 0;
  margin-left: 0;
  max-width: 100%;
  padding-bottom: 0;
  padding-top: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color cubic-bezier(0, 0, 0.39, 1) 100ms,color cubic-bezier(0, 0, 0.39, 1) 100ms,border-color cubic-bezier(0, 0, 0.39, 1) 100ms,box-shadow cubic-bezier(0.2, 0, 0.4, 0.9) 100ms;
  transition: background-color cubic-bezier(0, 0, 0.39, 1) 100ms,color cubic-bezier(0, 0, 0.39, 1) 100ms,border-color cubic-bezier(0, 0, 0.39, 1) 100ms,box-shadow cubic-bezier(0.2, 0, 0.4, 0.9) 100ms;
  color: rgb(255,255,255);
  font-size: 1rem;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  min-width: 96px;
  margin-left: 0.5rem;
}

@media (hover: hover) {
  .emotion-45:hover {
    background-color: #004CD6;
  }
}

.emotion-45:active {
  background-color: #0025BD;
  -webkit-transform: scale(0.96);
  -moz-transform: scale(0.96);
  -ms-transform: scale(0.96);
  transform: scale(0.96);
}

.emotion-45:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px #4494EF;
}

.emotion-45 svg {
  fill: rgb(255,255,255);
}

.emotion-46 {
  min-width: 0;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-47 {
  direction: ltr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 10px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Rubik','Helvetica','Arial';
  font-style: normal;
  font-weight: 400;
  height: 40px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: 0;
  margin-right: 0;
  margin-left: 0;
  max-width: 100%;
  padding-bottom: 0;
  padding-top: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color cubic-bezier(0, 0, 0.39, 1) 100ms,color cubic-bezier(0, 0, 0.39, 1) 100ms,border-color cubic-bezier(0, 0, 0.39, 1) 100ms,box-shadow cubic-bezier(0.2, 0, 0.4, 0.9) 100ms;
  transition: background-color cubic-bezier(0, 0, 0.39, 1) 100ms,color cubic-bezier(0, 0, 0.39, 1) 100ms,border-color cubic-bezier(0, 0, 0.39, 1) 100ms,box-shadow cubic-bezier(0.2, 0, 0.4, 0.9) 100ms;
  color: #006DE9;
  font-size: 1rem;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  min-width: 96px;
}

@media (hover: hover) {
  .emotion-47:hover {
    background-color: rgb(242,248,254);
    color: #004CD6;
  }

  .emotion-47:hover svg {
    fill: #004CD6;
  }
}

.emotion-47:active {
  background-color: #CFE4FC;
  color: #004CD6;
  -webkit-transform: scale(0.96);
  -moz-transform: scale(0.96);
  -ms-transform: scale(0.96);
  transform: scale(0.96);
}

.emotion-47:active svg {
  fill: #004CD6;
}

.emotion-47:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px #4494EF;
}

<body
  style="overflow: hidden;"
>
  <div
    id="carina-portal-root"
  >
    <div>
      <div
        class="emotion-0"
        data-placement="bottom"
      >
        <div
          class="emotion-1"
        />
      </div>
    </div>
  </div>
  <div>
    <div>
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
          data-cvent-id="test-snippet-settings-modal-scrim"
        />
        <div
          aria-label="Configure Settings"
          aria-modal="true"
          class="focus-visible  emotion-4"
          data-cvent-id="test-snippet-settings-modal"
          role="dialog"
          tabindex="-1"
        >
          <div
            class="emotion-5"
          >
            <div
              class="emotion-6"
            >
              <div
                class="emotion-7"
              >
                <div
                  class="emotion-8"
                >
                  <div
                    class="emotion-9"
                  >
                    <div
                      class="emotion-10"
                    >
                      <span
                        class="emotion-11"
                      >
                        Configure Settings
                      </span>
                      <button
                        aria-label="close modal "
                        class="emotion-12"
                        data-cvent-id="test-snippet-settings-modal-cross-button"
                        type="button"
                      >
                        <span
                          class="emotion-13"
                        >
                          <svg
                            aria-hidden="true"
                            class="emotion-14"
                            focusable="false"
                            role="img"
                            viewBox="0 0 32 32"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g>
                              <svg
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M13.4 12l5.3-5.3c.4-.4.4-1 0-1.4-.4-.4-1-.4-1.4 0L12 10.6 6.7 5.3c-.4-.4-1-.4-1.4 0-.4.4-.4 1 0 1.4l5.3 5.3-5.3 5.3c-.4.4-.4 1 0 1.4.2.2.4.3.7.3.3 0 .5-.1.7-.3l5.3-5.3 5.3 5.3c.2.2.5.3.7.3.2 0 .5-.1.7-.3.4-.4.4-1 0-1.4L13.4 12z"
                                />
                              </svg>
                            </g>
                          </svg>
                        </span>
                      </button>
                    </div>
                  </div>
                  <div
                    class="emotion-15"
                    data-layout="row"
                  >
                    <div
                      class="emotion-16"
                      data-layout="col"
                    >
                      <div
                        class="emotion-17"
                      >
                        <p
                          class="emotion-18"
                        >
                          Code Snippet
                        </p>
                        <div
                          class="emotion-19"
                        >
                          <div>
                            <div
                              aria-label="Code Snippet"
                              role="tooltip"
                              tabindex="0"
                            >
                              <svg
                                aria-hidden="true"
                                class="emotion-20"
                                focusable="false"
                                role="img"
                                viewBox="0 0 32 32"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <g>
                                  <svg
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M12 1C5.9 1 1 5.9 1 12s4.9 11 11 11 11-4.9 11-11S18.1 1 12 1zm0 20c-5 0-9-4-9-9s4-9 9-9 9 4 9 9-4 9-9 9zm0-5.25a1.25 1.25 0 110 2.5 1.25 1.25 0 010-2.5zM10.2 6.4c1-.5 2.1-.5 3.1-.1 1.5.5 2.6 2 2.7 3.9 0 2.6-3.3 3.8-3.7 3.9-.1.1-.2.1-.3.1-.4 0-.8-.3-.9-.7-.2-.6.1-1.1.6-1.3.6-.3 2.3-1.1 2.3-2.1 0-.9-.5-1.7-1.3-1.9-.6-.2-1.1-.2-1.6 0s-.8.6-1 1.1c-.2.6-.8.9-1.3.7-.5-.2-.8-.8-.6-1.3.3-1 1-1.8 2-2.3z"
                                    />
                                    <g
                                      fill-rule="evenodd"
                                    >
                                      <use />
                                      <use
                                        fill-rule="nonzero"
                                      />
                                    </g>
                                  </svg>
                                </g>
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div>
                        <div>
                          Test-code-snippet
                        </div>
                      </div>
                    </div>
                    <div
                      class="emotion-16"
                      data-layout="col"
                    >
                      <div
                        class="emotion-22"
                      >
                        <div
                          class="emotion-23"
                        >
                          <label
                            class="emotion-24"
                            for="whereDoesItRun_radio_button"
                          >
                            Where does this run?
                          </label>
                        </div>
                        <div
                          class="emotion-25"
                          data-cvent-id="where_does_it_run-radio"
                          role="radiogroup"
                        >
                          <div
                            class="emotion-26"
                            data-cvent-id="where_does_it_run-radio__div__1"
                          >
                            <input
                              aria-checked="true"
                              aria-invalid="false"
                              checked=""
                              class="emotion-27"
                              data-cvent-id="where_does_it_run-radio__1"
                              id="whereDoesItRun__0"
                              name="whereDoesItRun"
                              type="radio"
                              value="1"
                            />
                            <label
                              class="emotion-28"
                              for="whereDoesItRun__0"
                              id="whereDoesItRun__0_label"
                            >
                              All pages
                            </label>
                          </div>
                          <div
                            class="emotion-26"
                            data-cvent-id="where_does_it_run-radio__div__0"
                          >
                            <input
                              aria-checked="false"
                              aria-invalid="false"
                              class="emotion-27"
                              data-cvent-id="where_does_it_run-radio__0"
                              id="whereDoesItRun__1"
                              name="whereDoesItRun"
                              type="radio"
                              value="0"
                            />
                            <label
                              class="emotion-31"
                              for="whereDoesItRun__1"
                              id="whereDoesItRun__1_label"
                            >
                              Only video details pages
                            </label>
                          </div>
                        </div>
                      </div>
                      <div
                        class="emotion-17"
                      >
                        <p
                          class="emotion-18"
                        >
                          When does this run?
                        </p>
                        <div
                          class="emotion-19"
                        >
                          <div>
                            <div
                              aria-label="When does this run?"
                              role="tooltip"
                              tabindex="0"
                            >
                              <svg
                                aria-hidden="true"
                                class="emotion-20"
                                focusable="false"
                                role="img"
                                viewBox="0 0 32 32"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <g>
                                  <svg
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M12 1C5.9 1 1 5.9 1 12s4.9 11 11 11 11-4.9 11-11S18.1 1 12 1zm0 20c-5 0-9-4-9-9s4-9 9-9 9 4 9 9-4 9-9 9zm0-5.25a1.25 1.25 0 110 2.5 1.25 1.25 0 010-2.5zM10.2 6.4c1-.5 2.1-.5 3.1-.1 1.5.5 2.6 2 2.7 3.9 0 2.6-3.3 3.8-3.7 3.9-.1.1-.2.1-.3.1-.4 0-.8-.3-.9-.7-.2-.6.1-1.1.6-1.3.6-.3 2.3-1.1 2.3-2.1 0-.9-.5-1.7-1.3-1.9-.6-.2-1.1-.2-1.6 0s-.8.6-1 1.1c-.2.6-.8.9-1.3.7-.5-.2-.8-.8-.6-1.3.3-1 1-1.8 2-2.3z"
                                    />
                                    <g
                                      fill-rule="evenodd"
                                    >
                                      <use />
                                      <use
                                        fill-rule="nonzero"
                                      />
                                    </g>
                                  </svg>
                                </g>
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="emotion-25"
                        data-cvent-id="snippet-type-radio"
                        role="radiogroup"
                      >
                        <div
                          class="emotion-26"
                          data-cvent-id="snippet-type-radio__div__INITIALIZATION"
                        >
                          <input
                            aria-checked="true"
                            aria-invalid="false"
                            checked=""
                            class="emotion-27"
                            data-cvent-id="snippet-type-radio__INITIALIZATION"
                            id="snippetType__0"
                            name="snippetType"
                            type="radio"
                            value="INITIALIZATION"
                          />
                          <label
                            class="emotion-28"
                            for="snippetType__0"
                            id="snippetType__0_label"
                          >
                            Run on first page load
                          </label>
                        </div>
                        <div
                          class="emotion-26"
                          data-cvent-id="snippet-type-radio__div__ALL_PAGES"
                        >
                          <input
                            aria-checked="false"
                            aria-invalid="false"
                            class="emotion-27"
                            data-cvent-id="snippet-type-radio__ALL_PAGES"
                            id="snippetType__1"
                            name="snippetType"
                            type="radio"
                            value="ALL_PAGES"
                          />
                          <label
                            class="emotion-31"
                            for="snippetType__1"
                            id="snippetType__1_label"
                          >
                            Always run
                          </label>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="emotion-9"
                >
                  <div
                    class="emotion-44"
                  >
                    <div>
                      <div>
                        <div
                          aria-label="Assign this code snippet to a page"
                          tabindex="-1"
                        >
                          <button
                            aria-label="Done"
                            class="emotion-45"
                            data-cvent-id="test-snippet-settings-modal-save-button"
                            type="button"
                          >
                            <span
                              class="emotion-46"
                            >
                              Done
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                    <button
                      aria-label="Cancel"
                      class="emotion-47"
                      data-cvent-id="test-snippet-settings-modal-cancel-button"
                      type="button"
                    >
                      <span
                        class="emotion-46"
                      >
                        Cancel
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`SnippetSettingsModal Renders SnippetSettingsModal Modal with passed in Code snippet Name 1`] = `
.emotion-0 {
  position: absolute;
  left: 0;
  top: 0;
  z-index: 100;
}

.emotion-1 {
  position: absolute;
  visibility: hidden;
}

.emotion-2 {
  position: fixed;
  height: 100%;
  width: 100vw;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  top: 0;
  left: 0;
  z-index: 1100;
}

.emotion-3 {
  position: fixed;
  height: 100%;
  width: 100%;
  -webkit-backdrop-filter: blur(4px);
  backdrop-filter: blur(4px);
  background-color: rgba(217,220,222,0.8);
  top: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  z-index: 1100;
  transition-property: opacity;
  transition-timing-function: cubic-bezier(0, 0, 0.4, 0.9);
  transition-duration: 200ms;
  opacity: 1;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-4 {
  border: none;
  outline: none;
  box-sizing: border-box;
  max-height: 100vh;
  max-width: calc(100vw - 32px);
  background-color: rgb(255,255,255);
  overflow: hidden;
  box-shadow: 0px 4px 20px -2px rgba(0, 0, 0, 0.25);
  z-index: 1100;
  border-radius: 10px;
  width: 420px;
  transition-property: opacity,transform;
  transition-timing-function: cubic-bezier(0, 0, 0.4, 0.9);
  transition-duration: 200ms;
  opacity: 1;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-5 {
  direction: ltr;
  box-sizing: border-box;
  height: 100%;
  width: 100%;
  overflow: hidden;
  transition-property: opacity;
  transition-timing-function: cubic-bezier(0, 0, 0.4, 0.9);
  transition-duration: 200ms;
  opacity: 1;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  transition-delay: 200ms;
}

.emotion-6 {
  margin: 1.5rem;
}

.emotion-7 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-height: inherit;
  max-width: inherit;
  height: 100%;
  width: 100%;
  overflow: hidden;
  box-sizing: border-box;
}

.emotion-8 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  max-width: 100vw;
  max-height: 100vh;
  height: 100%;
  width: 100%;
  overflow-y: auto;
  position: relative;
}

.emotion-9 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  overflow: visible;
  -webkit-transition: box-shadow .2s ease-in-out;
  transition: box-shadow .2s ease-in-out;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0.15rem;
}

.emotion-11 {
  font-size: 1.5rem;
  color: rgb(26,32,38);
  width: 100%;
  font-weight: 400;
}

.emotion-12 {
  direction: ltr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 10px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Rubik','Helvetica','Arial';
  font-style: normal;
  font-weight: 400;
  height: 40px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: 0;
  margin-right: 0;
  margin-left: 0;
  max-width: 100%;
  padding-bottom: 0;
  padding-top: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color cubic-bezier(0, 0, 0.39, 1) 100ms,color cubic-bezier(0, 0, 0.39, 1) 100ms,border-color cubic-bezier(0, 0, 0.39, 1) 100ms,box-shadow cubic-bezier(0.2, 0, 0.4, 0.9) 100ms;
  transition: background-color cubic-bezier(0, 0, 0.39, 1) 100ms,color cubic-bezier(0, 0, 0.39, 1) 100ms,border-color cubic-bezier(0, 0, 0.39, 1) 100ms,box-shadow cubic-bezier(0.2, 0, 0.4, 0.9) 100ms;
  color: rgb(105,113,122);
  border-color: transparent;
  font-size: 1rem;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  min-width: 0;
  padding: 0.5rem;
  width: 40px;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (hover: hover) {
  .emotion-12:hover {
    color: rgb(255,255,255);
    background-color: rgb(52,56,63);
    border-color: rgb(74,80,89);
  }
}

.emotion-12:active {
  color: rgb(255,255,255);
  background-color: rgb(52,56,63);
  border-color: rgb(52,56,63);
  -webkit-transform: scale(0.96);
  -moz-transform: scale(0.96);
  -ms-transform: scale(0.96);
  transform: scale(0.96);
}

.emotion-12:active svg {
  fill: rgb(255,255,255);
}

.emotion-12:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px rgb(0,106,225);
}

.emotion-13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
}

.emotion-14 {
  width: 1.5rem;
  height: 1.5rem;
  fill: currentColor;
}

.emotion-15 {
  direction: inherit;
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  min-height: 0;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-16 {
  direction: inherit;
  box-sizing: border-box;
  position: relative;
  display: block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  min-height: inherit;
  min-width: 0px;
  width: 100%;
  margin-left: 0px;
  margin-right: 0px;
  padding-left: 8px;
  padding-right: 8px;
  margin-top: 1rem;
}

@media (min-width: 336px) {
  .emotion-16 {
    min-width: 0px;
    width: 100%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    margin-left: 0px;
    margin-right: 0px;
  }
}

@media (min-width: 560px) {
  .emotion-16 {
    min-width: 0px;
    width: 100%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    margin-left: 0px;
    margin-right: 0px;
  }
}

@media (min-width: 1080px) {
  .emotion-16 {
    min-width: 0px;
    width: 100%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    margin-left: 0px;
    margin-right: 0px;
    padding-left: 12px;
    padding-right: 12px;
  }
}

@media (min-width: 1464px) {
  .emotion-16 {
    min-width: 0px;
    width: 100%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    margin-left: 0px;
    margin-right: 0px;
  }
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-18 {
  margin: 0 0.2rem 0.25rem 0;
  font-size: 13 px;
  line-height: 19.5 px;
  font-weight: 400;
  color: rgb(105,113,122);
}

.emotion-19 {
  margin: 0.15rem 0 0 0;
  cursor: pointer;
}

.emotion-20 {
  width: 1rem;
  height: 1rem;
  fill: currentColor;
}

.emotion-22 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  box-sizing: border-box;
  display: block;
  margin: 0;
  padding: 0 0 1rem 0;
  width: 100%;
  vertical-align: top;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  text-align: left;
  direction: ltr;
}

.emotion-23 {
  position: relative;
}

.emotion-24 {
  font-family: 'Rubik','Helvetica','Arial';
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1.5;
  text-indent: 0;
  text-shadow: none;
  text-transform: none;
  color: rgb(105,113,122);
  display: block;
  font-size: 0.875rem;
  margin: 0 0 0.25rem;
  padding: 0;
  vertical-align: top;
  text-align: left;
}

.emotion-25 {
  font-family: 'Rubik','Helvetica','Arial';
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1.25;
  text-align: left;
  text-indent: 0;
  text-shadow: none;
  text-transform: none;
  box-sizing: border-box;
  clear: both;
  color: rgb(26,32,38);
  display: block;
  font-size: 0.875rem;
  list-style-type: none;
  margin: 0;
  outline: 0;
  padding: 0;
}

.emotion-26 {
  position: relative;
  padding: 0.5rem 0;
  outline: none;
  display: inherit;
}

.emotion-27 {
  position: absolute;
  left: -9999px;
}

.emotion-28 {
  display: inline-block;
  font-size: 0.875rem;
  margin-left: 1rem;
  padding-left: 0.5rem;
  position: relative;
}

.emotion-28::before {
  border-radius: 50%;
  box-sizing: border-box;
  content: "";
  display: block;
  position: absolute;
  top: 0;
  height: 1rem;
  width: 1rem;
  font-size: 1rem;
  cursor: pointer;
  padding-left: 0.5rem;
  left: -1rem;
  transition-property: box-shadow;
  transition-duration: 100ms;
  transition-timing-function: cubic-bezier(0.2, 0, 0.4, 0.9);
  background: rgb(0,106,225);
  border: 1px solid rgb(0,106,225);
}

.emotion-28::after {
  border-radius: 50%;
  box-sizing: border-box;
  content: "";
  display: block;
  position: absolute;
  cursor: pointer;
  font-size: 1rem;
  background: rgb(255,255,255);
  left: -11px;
  top: 5px;
  height: 0.375rem;
  width: 0.375rem;
}

.emotion-31 {
  display: inline-block;
  font-size: 0.875rem;
  margin-left: 1rem;
  padding-left: 0.5rem;
  position: relative;
}

.emotion-31::before {
  border-radius: 50%;
  box-sizing: border-box;
  content: "";
  display: block;
  position: absolute;
  top: 0;
  height: 1rem;
  width: 1rem;
  font-size: 1rem;
  cursor: pointer;
  padding-left: 0.5rem;
  left: -1rem;
  transition-property: box-shadow;
  transition-duration: 100ms;
  transition-timing-function: cubic-bezier(0.2, 0, 0.4, 0.9);
  background-color: rgb(255,255,255);
  color: rgb(26,32,38);
  border: 1px solid rgb(105,113,122);
}

.emotion-44 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  margin-top: 2rem;
  padding: 0.15rem;
}

.emotion-45 {
  direction: ltr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgb(0,106,225);
  border: 1px solid transparent;
  border-radius: 10px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Rubik','Helvetica','Arial';
  font-style: normal;
  font-weight: 400;
  height: 40px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: 0;
  margin-right: 0;
  margin-left: 0;
  max-width: 100%;
  padding-bottom: 0;
  padding-top: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color cubic-bezier(0, 0, 0.39, 1) 100ms,color cubic-bezier(0, 0, 0.39, 1) 100ms,border-color cubic-bezier(0, 0, 0.39, 1) 100ms,box-shadow cubic-bezier(0.2, 0, 0.4, 0.9) 100ms;
  transition: background-color cubic-bezier(0, 0, 0.39, 1) 100ms,color cubic-bezier(0, 0, 0.39, 1) 100ms,border-color cubic-bezier(0, 0, 0.39, 1) 100ms,box-shadow cubic-bezier(0.2, 0, 0.4, 0.9) 100ms;
  color: rgb(255,255,255);
  font-size: 1rem;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  min-width: 96px;
  margin-left: 0.5rem;
}

@media (hover: hover) {
  .emotion-45:hover {
    background-color: #004CD6;
  }
}

.emotion-45:active {
  background-color: #0025BD;
  -webkit-transform: scale(0.96);
  -moz-transform: scale(0.96);
  -ms-transform: scale(0.96);
  transform: scale(0.96);
}

.emotion-45:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px #4494EF;
}

.emotion-45 svg {
  fill: rgb(255,255,255);
}

.emotion-46 {
  min-width: 0;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-47 {
  direction: ltr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 10px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Rubik','Helvetica','Arial';
  font-style: normal;
  font-weight: 400;
  height: 40px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: 0;
  margin-right: 0;
  margin-left: 0;
  max-width: 100%;
  padding-bottom: 0;
  padding-top: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color cubic-bezier(0, 0, 0.39, 1) 100ms,color cubic-bezier(0, 0, 0.39, 1) 100ms,border-color cubic-bezier(0, 0, 0.39, 1) 100ms,box-shadow cubic-bezier(0.2, 0, 0.4, 0.9) 100ms;
  transition: background-color cubic-bezier(0, 0, 0.39, 1) 100ms,color cubic-bezier(0, 0, 0.39, 1) 100ms,border-color cubic-bezier(0, 0, 0.39, 1) 100ms,box-shadow cubic-bezier(0.2, 0, 0.4, 0.9) 100ms;
  color: #006DE9;
  font-size: 1rem;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  min-width: 96px;
}

@media (hover: hover) {
  .emotion-47:hover {
    background-color: rgb(242,248,254);
    color: #004CD6;
  }

  .emotion-47:hover svg {
    fill: #004CD6;
  }
}

.emotion-47:active {
  background-color: #CFE4FC;
  color: #004CD6;
  -webkit-transform: scale(0.96);
  -moz-transform: scale(0.96);
  -ms-transform: scale(0.96);
  transform: scale(0.96);
}

.emotion-47:active svg {
  fill: #004CD6;
}

.emotion-47:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px #4494EF;
}

<body
  style="overflow: hidden;"
>
  <div
    id="carina-portal-root"
  >
    <div>
      <div
        class="emotion-0"
        data-placement="bottom"
      >
        <div
          class="emotion-1"
        />
      </div>
    </div>
  </div>
  <div>
    <div>
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
          data-cvent-id="test-snippet-settings-modal-scrim"
        />
        <div
          aria-label="Configure Settings"
          aria-modal="true"
          class="focus-visible  emotion-4"
          data-cvent-id="test-snippet-settings-modal"
          role="dialog"
          tabindex="-1"
        >
          <div
            class="emotion-5"
          >
            <div
              class="emotion-6"
            >
              <div
                class="emotion-7"
              >
                <div
                  class="emotion-8"
                >
                  <div
                    class="emotion-9"
                  >
                    <div
                      class="emotion-10"
                    >
                      <span
                        class="emotion-11"
                      >
                        Configure Settings
                      </span>
                      <button
                        aria-label="close modal "
                        class="emotion-12"
                        data-cvent-id="test-snippet-settings-modal-cross-button"
                        type="button"
                      >
                        <span
                          class="emotion-13"
                        >
                          <svg
                            aria-hidden="true"
                            class="emotion-14"
                            focusable="false"
                            role="img"
                            viewBox="0 0 32 32"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g>
                              <svg
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M13.4 12l5.3-5.3c.4-.4.4-1 0-1.4-.4-.4-1-.4-1.4 0L12 10.6 6.7 5.3c-.4-.4-1-.4-1.4 0-.4.4-.4 1 0 1.4l5.3 5.3-5.3 5.3c-.4.4-.4 1 0 1.4.2.2.4.3.7.3.3 0 .5-.1.7-.3l5.3-5.3 5.3 5.3c.2.2.5.3.7.3.2 0 .5-.1.7-.3.4-.4.4-1 0-1.4L13.4 12z"
                                />
                              </svg>
                            </g>
                          </svg>
                        </span>
                      </button>
                    </div>
                  </div>
                  <div
                    class="emotion-15"
                    data-layout="row"
                  >
                    <div
                      class="emotion-16"
                      data-layout="col"
                    >
                      <div
                        class="emotion-17"
                      >
                        <p
                          class="emotion-18"
                        >
                          Code Snippet
                        </p>
                        <div
                          class="emotion-19"
                        >
                          <div>
                            <div
                              aria-label="Code Snippet"
                              role="tooltip"
                              tabindex="0"
                            >
                              <svg
                                aria-hidden="true"
                                class="emotion-20"
                                focusable="false"
                                role="img"
                                viewBox="0 0 32 32"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <g>
                                  <svg
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M12 1C5.9 1 1 5.9 1 12s4.9 11 11 11 11-4.9 11-11S18.1 1 12 1zm0 20c-5 0-9-4-9-9s4-9 9-9 9 4 9 9-4 9-9 9zm0-5.25a1.25 1.25 0 110 2.5 1.25 1.25 0 010-2.5zM10.2 6.4c1-.5 2.1-.5 3.1-.1 1.5.5 2.6 2 2.7 3.9 0 2.6-3.3 3.8-3.7 3.9-.1.1-.2.1-.3.1-.4 0-.8-.3-.9-.7-.2-.6.1-1.1.6-1.3.6-.3 2.3-1.1 2.3-2.1 0-.9-.5-1.7-1.3-1.9-.6-.2-1.1-.2-1.6 0s-.8.6-1 1.1c-.2.6-.8.9-1.3.7-.5-.2-.8-.8-.6-1.3.3-1 1-1.8 2-2.3z"
                                    />
                                    <g
                                      fill-rule="evenodd"
                                    >
                                      <use />
                                      <use
                                        fill-rule="nonzero"
                                      />
                                    </g>
                                  </svg>
                                </g>
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div>
                        <div>
                          Test-code-snippet
                        </div>
                      </div>
                    </div>
                    <div
                      class="emotion-16"
                      data-layout="col"
                    >
                      <div
                        class="emotion-22"
                      >
                        <div
                          class="emotion-23"
                        >
                          <label
                            class="emotion-24"
                            for="whereDoesItRun_radio_button"
                          >
                            Where does this run?
                          </label>
                        </div>
                        <div
                          class="emotion-25"
                          data-cvent-id="where_does_it_run-radio"
                          role="radiogroup"
                        >
                          <div
                            class="emotion-26"
                            data-cvent-id="where_does_it_run-radio__div__1"
                          >
                            <input
                              aria-checked="true"
                              aria-invalid="false"
                              checked=""
                              class="emotion-27"
                              data-cvent-id="where_does_it_run-radio__1"
                              id="whereDoesItRun__0"
                              name="whereDoesItRun"
                              type="radio"
                              value="1"
                            />
                            <label
                              class="emotion-28"
                              for="whereDoesItRun__0"
                              id="whereDoesItRun__0_label"
                            >
                              All pages
                            </label>
                          </div>
                          <div
                            class="emotion-26"
                            data-cvent-id="where_does_it_run-radio__div__0"
                          >
                            <input
                              aria-checked="false"
                              aria-invalid="false"
                              class="emotion-27"
                              data-cvent-id="where_does_it_run-radio__0"
                              id="whereDoesItRun__1"
                              name="whereDoesItRun"
                              type="radio"
                              value="0"
                            />
                            <label
                              class="emotion-31"
                              for="whereDoesItRun__1"
                              id="whereDoesItRun__1_label"
                            >
                              Only video details pages
                            </label>
                          </div>
                        </div>
                      </div>
                      <div
                        class="emotion-17"
                      >
                        <p
                          class="emotion-18"
                        >
                          When does this run?
                        </p>
                        <div
                          class="emotion-19"
                        >
                          <div>
                            <div
                              aria-label="When does this run?"
                              role="tooltip"
                              tabindex="0"
                            >
                              <svg
                                aria-hidden="true"
                                class="emotion-20"
                                focusable="false"
                                role="img"
                                viewBox="0 0 32 32"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <g>
                                  <svg
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M12 1C5.9 1 1 5.9 1 12s4.9 11 11 11 11-4.9 11-11S18.1 1 12 1zm0 20c-5 0-9-4-9-9s4-9 9-9 9 4 9 9-4 9-9 9zm0-5.25a1.25 1.25 0 110 2.5 1.25 1.25 0 010-2.5zM10.2 6.4c1-.5 2.1-.5 3.1-.1 1.5.5 2.6 2 2.7 3.9 0 2.6-3.3 3.8-3.7 3.9-.1.1-.2.1-.3.1-.4 0-.8-.3-.9-.7-.2-.6.1-1.1.6-1.3.6-.3 2.3-1.1 2.3-2.1 0-.9-.5-1.7-1.3-1.9-.6-.2-1.1-.2-1.6 0s-.8.6-1 1.1c-.2.6-.8.9-1.3.7-.5-.2-.8-.8-.6-1.3.3-1 1-1.8 2-2.3z"
                                    />
                                    <g
                                      fill-rule="evenodd"
                                    >
                                      <use />
                                      <use
                                        fill-rule="nonzero"
                                      />
                                    </g>
                                  </svg>
                                </g>
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="emotion-25"
                        data-cvent-id="snippet-type-radio"
                        role="radiogroup"
                      >
                        <div
                          class="emotion-26"
                          data-cvent-id="snippet-type-radio__div__INITIALIZATION"
                        >
                          <input
                            aria-checked="true"
                            aria-invalid="false"
                            checked=""
                            class="emotion-27"
                            data-cvent-id="snippet-type-radio__INITIALIZATION"
                            id="snippetType__0"
                            name="snippetType"
                            type="radio"
                            value="INITIALIZATION"
                          />
                          <label
                            class="emotion-28"
                            for="snippetType__0"
                            id="snippetType__0_label"
                          >
                            Run on first page load
                          </label>
                        </div>
                        <div
                          class="emotion-26"
                          data-cvent-id="snippet-type-radio__div__ALL_PAGES"
                        >
                          <input
                            aria-checked="false"
                            aria-invalid="false"
                            class="emotion-27"
                            data-cvent-id="snippet-type-radio__ALL_PAGES"
                            id="snippetType__1"
                            name="snippetType"
                            type="radio"
                            value="ALL_PAGES"
                          />
                          <label
                            class="emotion-31"
                            for="snippetType__1"
                            id="snippetType__1_label"
                          >
                            Always run
                          </label>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="emotion-9"
                >
                  <div
                    class="emotion-44"
                  >
                    <div>
                      <div>
                        <div
                          aria-label="Assign this code snippet to a page"
                          tabindex="-1"
                        >
                          <button
                            aria-label="Done"
                            class="emotion-45"
                            data-cvent-id="test-snippet-settings-modal-save-button"
                            type="button"
                          >
                            <span
                              class="emotion-46"
                            >
                              Done
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                    <button
                      aria-label="Cancel"
                      class="emotion-47"
                      data-cvent-id="test-snippet-settings-modal-cancel-button"
                      type="button"
                    >
                      <span
                        class="emotion-46"
                      >
                        Cancel
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
